<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_passcode_below"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enter_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/generate_unique_id"
            android:id="@+id/generate_unique_id_btn"
            android:onClick="generateUniqueIdButtonOnClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_unique_id"
            android:id="@+id/get_unique_id_btn"
            android:onClick="getUniqueIdButtonOnClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/has_unique_id"
            android:id="@+id/has_unique_id_btn"
            android:onClick="hasUniqueIdButtonOnClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_unique_id"
            android:id="@+id/clear_unique_id_btn"
            android:onClick="clearUniqueIdButtonOnClick"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/generated_unique_id_is"
        android:textSize="20sp"
        android:id="@+id/unique_id_display_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unique_id_output_field"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

</LinearLayout>