<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/logLevelLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_logging_level"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinLogLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/logMessageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:text="@string/label_logging_message" >"
    </TextView>

    <EditText
        android:id="@+id/logMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:hint="Log Message"
        android:inputType="text"
        android:textAllCaps="false" >

    </EditText>
    
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit_action" />
</LinearLayout>